# rt1050_freertos_epd

./: .gitmodules  CMakeLists.txt  MIMXRT1052xxxxB.mex
board/: clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
components/EPD/: CMakeLists.txt
components/EPD/include/: epd_common.h  epd_private.h  epd_wfh0420cz35.h
components/EPD/src/: epd_common.c  epd_wfh0420cz35.c
components/LittleVGL/: CMakeLists.txt
include/: FreeRTOSConfig.h  epd_test_image_1.h  epd_test_images.h  lv_conf.h  user_tasks.h
source/: main.c
source/tasks/: user_task_lvgl.c
